# tu_vi

./: .env.example  .gitignore  ASTROLOGY_TOOL_SPECIFICATION.md  app.py  pyproject.toml  requirements.txt  run.py  test_mimo.py  test_partial.py  test_partial_ai.py
.streamlit/: config.toml
astrology_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/: __init__.py  main.py
config/: deepseek.yaml  settings.yaml
config/prompts/: package_a.txt  system_base.txt
data/cache/: geocode_cache.json
data/ephemeris/: README.md
data/tuvi/: chinh_tinh.json  cuc_table.json  cung_menh_table.json  phu_tinh.json  tu_hoa_table.json
data/western/: aspects.json  dignities.json  (+1 more)
output/: report_Le_Tien_Hung_TUVI_20251209_195253.md  report_Le_Tien_Hung_TUVI_20251209_214740.md  report_Le_Tien_Hung_WESTERN_20251209_195737.md  report_Le_Tien_Hung_WESTERN_20251209_203105.md  report_Le_Tien_Hung_WESTERN_20251209_210239.md  report_Le_Tien_Hung_WESTERN_20251209_211252.md  report_Le_Tien_Hung_WESTERN_20251209_214348.md  report_Name_A_20251209_172817.md  report_Nguyen_Van_A_A_20251209_162049.md  report_Nguyen_Van_A_A_20251209_162608.md  report_Nguyen_Van_A_A_20251209_171220.md  report_Nguyen_Van_A_A_20251209_171742.md  report_Nguyen_Van_A_A_20251209_181121.md  report_Nguyen_Van_A_TUVI_20251209_191027.md  report_Nguyen_Van_A_TUVI_20251209_191530.md  report_Nguyen_Van_A_WESTERN_20251209_192021.md  test_mimo_response.md  test_tuvi_academic.md  test_tuvi_partial.md  test_tuvi_partial_ai.md  test_tuvi_simple.md  test_western_partial.md  test_western_simple.md
src/: __init__.py
tests/: __init__.py
(+30 files in other folders)
